tests/specs/run/ld_preload/env_arg.out
error: Uncaught (in promise) PermissionDenied: Requires --allow-all permissions to spawn subprocess with LD_PRELOAD environment variable.
}).spawn();
   ^
    at [WILDCARD]
